--- a/dev/config/local_docker.yml
+++ b/dev/config/local_docker.yml
@@ -1,5 +1,7 @@
+
+
 kafka:
-  brokers: [localhost:9092]
+  brokers: [host.docker.internal:29092]
   group_id: test
   auto_offset_reset: earliest
 
@@ -7,14 +9,15 @@ pipeline:
   input:
     batch_size: 1000
     topics:
-    - "topic-enrich"
+    - "topic-local-docker"
 
   sql: |
     SELECT
-      *,
-      {'something': properties.city} as nested_city,
-      row(properties.city, 1, 2) as nested_json
+      properties.city as city,
+      count(*) as city_count
     FROM batch
+    GROUP BY
+      city
 
   output:
     type: kafka
