Removes the handler.TumblingWindow. It is just an InferredMemBatch table

--- a/dev/config/examples/tumbling.window.yml
+++ b/dev/config/examples/tumbling.window.yml
@@ -24,7 +24,7 @@ tables:
           type: console
 
 pipeline:
-  type: 'handlers.TumblingWindow'
+  type: 'handlers.InferredMemBatch'
 
   input:
     batch_size: 1000
