- removes cli package - setups benchmark harness - fixes django-like __init__.py imports

--- a/dev/config/examples/tumbling.window.yml
+++ b/dev/config/examples/tumbling.window.yml
@@ -1,5 +1,5 @@
 kafka:
-  brokers: [localhost:9092]
+  brokers: [{{ kafka_brokers|default('localhost:9092') }}]
   group_id: test
   auto_offset_reset: earliest
 
