tumbling window supports kakfa output!

--- a/dev/config/examples/tumbling.window.yml
+++ b/dev/config/examples/tumbling.window.yml
@@ -22,7 +22,8 @@ tables:
         time_field: timestamp
 
         output:
-          type: console
+          type: kafka
+          topic: output-tumbling-window-1
 
 pipeline:
   type: 'handlers.InferredMemBatch'
