Tumbling window aggregation :) (#31)
* Tumbling window aggregation :)

* wip: Adds window config parsing

* tumbling window skeleton and test

* PHONY

* test

* trying to get tests passing on github actions

* TIMESTAMPTZ

* sets UTC timezeon

* Removes the handler.TumblingWindow. It is just an InferredMemBatch table

* Making it work!

* Updates test cases

* tumbling -> window namespace

* sqlflow.conf -> sqlflow.input

* - adds typed window output
- adds basic agg mem invoke test

* invoke test for enrich

* Invoke test and support for managed (windowed) tables

* - removes cli package
- setups benchmark harness
- fixes django-like __init__.py imports

* tests passing

* tumbling window supports kakfa output!

* window -> manager

* egg was installed, removes it

* CLI convoke + docker image

---------

Co-authored-by: Daniel Mican <danielmican@Daniels-MacBook-Pro.local>

--- a/dev/config/examples/tumbling.window.yml
+++ b/dev/config/examples/tumbling.window.yml
@@ -1,41 +1,46 @@
 kafka:
-  brokers: [localhost:9092]
+  brokers: [{{ kafka_brokers|default('localhost:9092') }}]
   group_id: test
   auto_offset_reset: earliest
 
 tables:
   sql:
     - name: agg_cities_count
-      # persistence: 'memory'
       sql: |
         CREATE TABLE agg_cities_count (
-          date DATE,
+          timestamp TIMESTAMPTZ,
           city VARCHAR,
           count INT 
         );
-        CREATE UNIQUE INDEX daily_cities_count_idx ON agg_cities_count (date, city);
+        CREATE UNIQUE INDEX daily_cities_count_idx ON agg_cities_count (timestamp, city);
+
+      # tables can be managed as a windowed table.
+      # windowed tables flush the table at certain durations.
+      manager:
+        tumbling_window:
+          duration_seconds: 10
+          time_field: timestamp
+
+        output:
+          type: kafka
+          topic: output-tumbling-window-1
 
 pipeline:
+  type: 'handlers.InferredMemBatch'
+
   input:
     batch_size: 1000
-    topics:
-    - "cities-window-in"
+    topics: [{{ topic|default('tumbling-window') }}]
 
   sql: |
     INSERT INTO agg_cities_count
+    BY NAME
     SELECT 
-      time::date as date,
+      timestamp::date as timestamp,
       properties.city as city,
       count(*) as count
     FROM batch
     GROUP BY 
-      date, city
-    ON CONFLICT DO UPDATE SET count = count + EXCLUDED.count
-
-  window:
-    type: tumbling
-    size: 10m
-
-  output:
-    type: kafka
-    topic: "cities-window-out"
+      timestamp, city
+    ON CONFLICT (timestamp, city) 
+    DO UPDATE SET count = count + EXCLUDED.count
