--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,42 @@
+asttokens==2.4.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.7
 confluent-kafka==2.3.0
+decorator==5.1.1
+docker==7.1.0
 duckdb==0.9.2
+executing==2.0.1
+idna==3.10
+iniconfig==2.0.0
+ipdb==0.13.13
+ipython==8.18.1
+jedi==0.19.1
 Jinja2==3.1.2
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+numpy==1.26.2
+packaging==23.2
 pandas==2.2.1
+parso==0.8.3
+pexpect==4.9.0
+pluggy==1.3.0
+polars==0.19.15
+prompt-toolkit==3.0.41
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==14.0.1
+Pygments==2.17.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
+requests==2.32.3
+six==1.16.0
+stack-data==0.6.3
+traitlets==5.14.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.3.0
+wcwidth==0.2.12
+wrapt==1.17.0
