--- a/dev/config/examples/basic.agg.mem.yml
+++ b/dev/config/examples/basic.agg.mem.yml
@@ -1,25 +1,27 @@
-kafka:
-  brokers: [localhost:9092]
-  group_id: test
-  auto_offset_reset: earliest
-
 pipeline:
-  type: 'handlers.InferredMemBatch'
-
-  input:
+  source:
     batch_size: 1000
-    topics:
-    - "topic-simple-agg-mem"
-
-  sql: |
-    SELECT
-      properties.city as city,
-      count(*) as city_count
-    FROM batch
-    GROUP BY
-      city
-    ORDER BY city DESC
-
-  output:
     type: kafka
-    topic: output-simple-agg-mem
+    kafka:
+      brokers: [localhost:9092]
+      group_id: test
+      auto_offset_reset: earliest
+      topics:
+        - "topic-simple-agg-mem"
+
+  handler:
+    type: 'handlers.InferredMemBatch'
+    sql: |
+      SELECT
+        properties.city as city,
+        count(*) as city_count
+      FROM batch
+      GROUP BY
+        city
+      ORDER BY city DESC
+
+  sink:
+    type: kafka
+    kafka:
+      brokers: [localhost:9092]
+      topic: output-simple-agg-mem
