--- a/dev/config/examples/enrich.yml
+++ b/dev/config/examples/enrich.yml
@@ -1,21 +1,26 @@
-kafka:
-  brokers: [localhost:9092]
-  group_id: test
-  auto_offset_reset: earliest
-
 pipeline:
-  input:
-    batch_size: 1000
-    topics:
-    - "topic-enrich"
+  batch_size: 1000
 
-  sql: |
-    SELECT
-      *,
-      {'something': properties.city} as nested_city,
-      row(properties.city, 1, 2) as nested_json
-    FROM batch
-
-  output:
+  source:
     type: kafka
-    topic: output-1
+    kafka:
+      brokers: [localhost:9092]
+      group_id: test
+      auto_offset_reset: earliest
+      topics:
+        - "topic-enrich"
+
+  handler:
+    type: 'handlers.InferredMemBatch'
+    sql: |
+      SELECT
+        *,
+        {'something': properties.city} as nested_city,
+        'extra' as extra
+      FROM batch
+      
+  sink:
+    type: kafka
+    kafka:
+      brokers: [localhost:9092]
+      topic: output-enrich
