--- a/dev/config/examples/csv.mem.join.yml
+++ b/dev/config/examples/csv.mem.join.yml
@@ -1,8 +1,3 @@
-kafka:
-  brokers: [localhost:9092]
-  group_id: test
-  auto_offset_reset: earliest
-
 tables:
   csv:
     - name: locations
@@ -14,24 +9,34 @@ tables:
 
 
 pipeline:
-  input:
-    batch_size: 1000
-    topics:
-      - "topic-csv-mem-join"
+  batch_size: 1000
 
-  sql: |
-    SELECT
-      state_full,
-      count(*) as city_count
-    FROM batch
-    JOIN locations ON
-    (
-      locations.city = properties.city 
-    )
-    GROUP BY
-      state_full
-    ORDER BY state_full DESC
-
-  output:
+  source:
     type: kafka
-    topic: output-csv-mem-join
+    kafka:
+      brokers: [localhost:9092]
+      group_id: test
+      auto_offset_reset: earliest
+      topics:
+        - "topic-csv-mem-join"
+
+  handler:
+    type: 'handlers.InferredMemBatch'
+    sql: |
+      SELECT
+        state_full,
+        count(*) as city_count
+      FROM batch
+      JOIN locations ON
+      (
+        locations.city = properties.city 
+      )
+      GROUP BY
+        state_full
+      ORDER BY state_full DESC
+
+  sink:
+    type: kafka
+    kafka:
+      brokers: [localhost:9092]
+      topic: output-csv-mem-join
