--- a/dev/config/examples/tumbling.window.yml
+++ b/dev/config/examples/tumbling.window.yml
@@ -1,8 +1,3 @@
-kafka:
-  brokers: [{{ kafka_brokers|default('localhost:9092') }}]
-  group_id: test
-  auto_offset_reset: earliest
-
 tables:
   sql:
     - name: agg_cities_count
@@ -21,26 +16,38 @@ tables:
           duration_seconds: 10
           time_field: timestamp
 
-        output:
+        sink:
           type: kafka
-          topic: output-tumbling-window-1
+          kafka:
+            brokers: [{{ kafka_brokers|default('localhost:9092') }}]
+            topic: output-tumbling-window-1
 
 pipeline:
-  type: 'handlers.InferredMemBatch'
+  batch_size: 1000
 
-  input:
-    batch_size: 1000
-    topics: [{{ topic|default('tumbling-window') }}]
+  source:
+    type: kafka
+    kafka:
+      brokers: [{{ kafka_brokers|default('localhost:9092') }}]
+      group_id: test
+      auto_offset_reset: earliest
+      topics:
+        - "{{ topic|default('tumbling-window') }}"
 
-  sql: |
-    INSERT INTO agg_cities_count
-    BY NAME
-    SELECT 
-      timestamp::date as timestamp,
-      properties.city as city,
-      count(*) as count
-    FROM batch
-    GROUP BY 
-      timestamp, city
-    ON CONFLICT (timestamp, city) 
-    DO UPDATE SET count = count + EXCLUDED.count
+  handler:
+    type: 'handlers.InferredMemBatch'
+    sql: |
+      INSERT INTO agg_cities_count
+      BY NAME
+      SELECT 
+        timestamp::date as timestamp,
+        properties.city as city,
+        count(*) as count
+      FROM batch
+      GROUP BY 
+        timestamp, city
+      ON CONFLICT (timestamp, city) 
+      DO UPDATE SET count = count + EXCLUDED.count
+
+  sink:
+    type: console
