--- a/dev/config/local.docker.yml
+++ b/dev/config/local.docker.yml
@@ -1,24 +1,28 @@
-
-
-kafka:
-  brokers: [host.docker.internal:29092]
-  group_id: test
-  auto_offset_reset: earliest
-
 pipeline:
-  input:
-    batch_size: 1000
-    topics:
-    - "topic-local-docker"
+  batch_size: 1000
 
-  sql: |
-    SELECT
-      properties.city as city,
-      count(*) as city_count
-    FROM batch
-    GROUP BY
-      city
-
-  output:
+  source:
     type: kafka
-    topic: output-local-docker
+    kafka:
+      brokers: [host.docker.internal:29092]
+      group_id: test
+      auto_offset_reset: earliest
+      topics:
+        - "topic-local-docker"
+
+  handler:
+    type: 'handlers.InferredMemBatch'
+    sql: |
+      SELECT
+        properties.city as city,
+        count(*) as city_count
+      FROM batch
+      GROUP BY
+        city
+      ORDER BY city DESC
+
+  sink:
+    type: kafka
+    kafka:
+      brokers: [host.docker.internal:29092]
+      topic: output-local-docker
