feat(config): Loads envvars starting with SQLFLOW into config into template context.
Updates Jinja2 for security vuln

--- a/dev/config/examples/bluesky/bluesky.kafka.raw.yml
+++ b/dev/config/examples/bluesky/bluesky.kafka.raw.yml
@@ -14,5 +14,5 @@ pipeline:
   sink:
     type: kafka
     kafka:
-      brokers: [localhost:9092]
+      brokers: [{{ SQLFLOW_KAFKA_BROKERS|default('localhost:9092') }}]
       topic: output-bluesky-firehose
