--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+annotated-types==0.7.0
 asttokens==2.4.1
+blinker==1.9.0
+cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.7
@@ -8,14 +11,19 @@ docker==7.1.0
 duckdb==0.9.2
 executing==2.0.1
 Flask==3.1.0
+fsspec==2024.12.0
 idna==3.10
 iniconfig==2.0.0
 ipdb==0.13.13
 ipython==8.18.1
+itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
+mmh3==5.0.1
 numpy==1.26.2
 packaging==23.2
 pandas==2.2.1
@@ -27,18 +35,28 @@ prompt-toolkit==3.0.41
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==14.0.1
+pydantic==2.10.5
+pydantic_core==2.27.2
 Pygments==2.17.2
+pyiceberg==0.8.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
+rich==13.9.4
 six==1.16.0
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.37
 stack-data==0.6.3
+strictyaml==1.7.3
+tenacity==9.0.0
 traitlets==5.14.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.3.0
 wcwidth==0.2.12
 websockets==14.1
+Werkzeug==3.1.3
 wrapt==1.17.0
