--- a/dev/config/examples/local.parquet.sink.yml
+++ b/dev/config/examples/local.parquet.sink.yml
@@ -1,5 +1,5 @@
 pipeline:
-  batch_size: 1000
+  batch_size: {{ batch_size|default(5000) }}
 
   source:
     type: kafka
@@ -20,5 +20,5 @@ pipeline:
     format:
       type: parquet
     local:
-      base_path: {{ sink_base_path|default('/tmp/sql-flow/test/local.parquet.sink.yml') }}
+      base_path: {{ sink_base_path|default('/tmp/sqlflow/test/local.parquet.sink.yml') }}
       prefix: testing
