--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ SQLAlchemy==2.0.37
 stack-data==0.6.3
 strictyaml==1.7.3
 tenacity==9.0.0
+tldextract==5.1.3
 traitlets==5.14.0
 typing_extensions==4.12.2
 tzdata==2024.1
