--- a/dev/config/examples/basic.agg.mem.yml
+++ b/dev/config/examples/basic.agg.mem.yml
@@ -4,25 +4,23 @@ pipeline:
   source:
     type: kafka
     kafka:
-      brokers: [{{ kafka_brokers|default('localhost:9092') }}]
+      brokers: [{{ SQLFLOW_KAFKA_BROKERS|default('localhost:9092') }}]
       group_id: test
       auto_offset_reset: earliest
       topics:
-        - "topic-simple-agg-mem"
+        - "input-simple-agg-mem"
 
   handler:
     type: 'handlers.InferredMemBatch'
     sql: |
       SELECT
         properties.city as city,
-        count(*) as city_count
+        1 as city_count
       FROM batch
-      GROUP BY
-        city
       ORDER BY city DESC
 
   sink:
     type: kafka
     kafka:
-      brokers: [{{ kafka_brokers|default('localhost:9092') }}]
+      brokers: [{{ SQLFLOW_KAFKA_BROKERS|default('localhost:9092') }}]
       topic: output-simple-agg-mem
