--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 mmh3==5.0.1
 numpy==1.26.2
+opentelemetry-api==1.29.0
+opentelemetry-sdk==1.29.0
 packaging==23.2
 pandas==2.2.1
 parso==0.8.3
