--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,16 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 mmh3==5.0.1
 numpy==1.26.2
+opentelemetry-api==1.29.0
+opentelemetry-exporter-prometheus==0.50b0
+opentelemetry-sdk==1.29.0
 packaging==23.2
 pandas==2.2.1
 parso==0.8.3
 pexpect==4.9.0
 pluggy==1.3.0
 polars==0.19.15
+prometheus_client==0.21.1
 prompt-toolkit==3.0.41
 ptyprocess==0.7.0
 pure-eval==0.2.2
