postgres sink, adds configurable batch size

--- a/dev/config/examples/kafka.postgres.sink.yml
+++ b/dev/config/examples/kafka.postgres.sink.yml
@@ -11,7 +11,7 @@ commands:
 pipeline:
   name: kafka-postgres-sink-example
   description: "Inserts a kafka stream into a postgres table"
-  batch_size: 50
+  batch_size: {{ SQLFLOW_BATCH_SIZE|default(1) }}
 
   source:
     type: kafka
