pipeline error handling test

--- a/dev/config/examples/basic.agg.mem.yml
+++ b/dev/config/examples/basic.agg.mem.yml
@@ -3,7 +3,7 @@ pipeline:
 
   source:
     on_error:
-      policy: ignore
+      policy: {{ SQLFLOW_SOURCE_ERROR_POLICY|default('ignore') }}
 
     type: kafka
     kafka:
