--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
