--- a/sqlflow/static/schemas/config.json
+++ b/sqlflow/static/schemas/config.json
@@ -2,32 +2,83 @@
   "$schema": "https://json-schema.org/draft/2020-12/schema",
   "type": "object",
   "properties": {
+    "commands": {
+      "type": "array",
+      "description": "List of SQL commands to execute before processing the pipeline.",
+      "items": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Name of the command for reference."
+          },
+          "sql": {
+            "type": "string",
+            "description": "SQL statements to execute."
+          }
+        },
+        "required": ["name", "sql"]
+      }
+    },
     "pipeline": {
       "type": "object",
+      "description": "Main pipeline configuration.",
       "properties": {
-        "batch_size": { "type": "integer", "minimum": 1 },
+        "batch_size": {
+          "type": "integer",
+          "minimum": 1,
+          "description": "Number of messages processed in a batch."
+        },
+        "flush_interval_seconds": {
+          "type": "integer",
+          "minimum": 30,
+          "description": "Time interval to flush batches in seconds."
+        },
         "source": {
           "type": "object",
+          "description": "Configuration for the data source.",
           "properties": {
+            "on_error": {
+              "type": "object",
+              "description": "Error handling strategy for the source.",
+              "properties": {
+                "policy": {
+                  "type": "string",
+                  "enum": ["raise", "ignore"],
+                  "default": "raise",
+                  "description": "Defines how errors should be handled."
+                }
+              },
+              "required": ["policy"]
+            },
             "type": {
-              "type": "string", "enum": ["kafka"]
+              "type": "string",
+              "enum": ["kafka"],
+              "description": "Type of source (currently only 'kafka' is supported)."
             },
             "kafka": {
               "type": "object",
+              "description": "Kafka-specific source configuration.",
               "properties": {
                 "brokers": {
                   "type": "array",
-                  "items": { "type": "string", "format": "hostname" }
+                  "items": { "type": "string", "format": "hostname" },
+                  "description": "List of Kafka broker addresses."
                 },
-                "group_id": { "type": "string" },
+                "group_id": {
+                  "type": "string",
+                  "description": "Kafka consumer group ID."
+                },
                 "auto_offset_reset": {
                   "type": "string",
-                  "enum": ["earliest", "latest"]
+                  "enum": ["earliest", "latest"],
+                  "description": "Offset reset policy."
                 },
                 "topics": {
                   "type": "array",
                   "items": { "type": "string" },
-                  "minItems": 1
+                  "minItems": 1,
+                  "description": "List of Kafka topics to consume."
                 }
               },
               "required": ["brokers", "group_id", "auto_offset_reset", "topics"]
@@ -35,43 +86,55 @@
           },
           "required": ["type", "kafka"]
         },
-
         "handler": {
           "type": "object",
+          "description": "Data processing configuration.",
           "properties": {
             "type": {
               "type": "string",
-              "enum": [
-                "handlers.InferredDiskBatch",
-                "handlers.InferredMemBatch"
-              ]
+              "enum": ["handlers.InferredDiskBatch", "handlers.InferredMemBatch"],
+              "description": "Type of handler used for processing."
             },
-            "sql": { "type": "string" }
+            "sql": {
+              "type": "string",
+              "description": "SQL query to process each batch."
+            }
           },
           "required": ["type", "sql"]
         },
-
         "sink": {
           "type": "object",
+          "description": "Configuration for the data sink.",
           "properties": {
-            "type": { "type": "string", "enum": ["kafka"] },
+            "type": {
+              "type": "string",
+              "enum": ["kafka", "noop"],
+              "description": "Type of sink (supports 'kafka' or 'noop')."
+            },
             "kafka": {
               "type": "object",
+              "description": "Kafka-specific sink configuration.",
               "properties": {
                 "brokers": {
                   "type": "array",
-                  "items": { "type": "string", "format": "hostname" }
+                  "items": { "type": "string", "format": "hostname" },
+                  "description": "List of Kafka brokers for publishing data."
                 },
-                "topic": { "type": "string" }
+                "topic": {
+                  "type": "string",
+                  "description": "Kafka topic where processed data will be written."
+                }
               },
               "required": ["brokers", "topic"]
             }
           },
-          "required": ["type", "kafka"]
+          "required": ["type"]
         }
       },
-      "required": ["batch_size", "source", "handler", "sink"]
+      "required": ["batch_size", "source", "handler", "sink"],
+      "additionalProperties": false
     }
   },
-  "required": ["pipeline"]
+  "required": ["pipeline"],
+  "additionalProperties": false
 }
