--- a/sqlflow/static/schemas/config.json
+++ b/sqlflow/static/schemas/config.json
@@ -17,7 +17,10 @@
             "description": "SQL statements to execute."
           }
         },
-        "required": ["name", "sql"]
+        "required": [
+          "name",
+          "sql"
+        ]
       }
     },
     "pipeline": {
@@ -44,16 +47,23 @@
               "properties": {
                 "policy": {
                   "type": "string",
-                  "enum": ["raise", "ignore"],
+                  "enum": [
+                    "raise",
+                    "ignore"
+                  ],
                   "default": "raise",
                   "description": "Defines how errors should be handled."
                 }
               },
-              "required": ["policy"]
+              "required": [
+                "policy"
+              ]
             },
             "type": {
               "type": "string",
-              "enum": ["kafka"],
+              "enum": [
+                "kafka"
+              ],
               "description": "Type of source (currently only 'kafka' is supported)."
             },
             "kafka": {
@@ -62,7 +72,10 @@
               "properties": {
                 "brokers": {
                   "type": "array",
-                  "items": { "type": "string", "format": "hostname" },
+                  "items": {
+                    "type": "string",
+                    "format": "hostname"
+                  },
                   "description": "List of Kafka broker addresses."
                 },
                 "group_id": {
@@ -71,20 +84,33 @@
                 },
                 "auto_offset_reset": {
                   "type": "string",
-                  "enum": ["earliest", "latest"],
+                  "enum": [
+                    "earliest",
+                    "latest"
+                  ],
                   "description": "Offset reset policy."
                 },
                 "topics": {
                   "type": "array",
-                  "items": { "type": "string" },
+                  "items": {
+                    "type": "string"
+                  },
                   "minItems": 1,
                   "description": "List of Kafka topics to consume."
                 }
               },
-              "required": ["brokers", "group_id", "auto_offset_reset", "topics"]
+              "required": [
+                "brokers",
+                "group_id",
+                "auto_offset_reset",
+                "topics"
+              ]
             }
           },
-          "required": ["type", "kafka"]
+          "required": [
+            "type",
+            "kafka"
+          ]
         },
         "handler": {
           "type": "object",
@@ -92,7 +118,10 @@
           "properties": {
             "type": {
               "type": "string",
-              "enum": ["handlers.InferredDiskBatch", "handlers.InferredMemBatch"],
+              "enum": [
+                "handlers.InferredDiskBatch",
+                "handlers.InferredMemBatch"
+              ],
               "description": "Type of handler used for processing."
             },
             "sql": {
@@ -100,7 +129,10 @@
               "description": "SQL query to process each batch."
             }
           },
-          "required": ["type", "sql"]
+          "required": [
+            "type",
+            "sql"
+          ]
         },
         "sink": {
           "type": "object",
@@ -108,7 +140,11 @@
           "properties": {
             "type": {
               "type": "string",
-              "enum": ["kafka", "noop"],
+              "enum": [
+                "kafka",
+                "noop",
+                "iceberg"
+              ],
               "description": "Type of sink (supports 'kafka' or 'noop')."
             },
             "kafka": {
@@ -117,7 +153,10 @@
               "properties": {
                 "brokers": {
                   "type": "array",
-                  "items": { "type": "string", "format": "hostname" },
+                  "items": {
+                    "type": "string",
+                    "format": "hostname"
+                  },
                   "description": "List of Kafka brokers for publishing data."
                 },
                 "topic": {
@@ -125,16 +164,46 @@
                   "description": "Kafka topic where processed data will be written."
                 }
               },
-              "required": ["brokers", "topic"]
+              "required": [
+                "brokers",
+                "topic"
+              ]
+            },
+            "iceberg": {
+              "type": "object",
+              "description": "Iceberg-specific sink configuration.",
+              "properties": {
+                "catalog_name": {
+                  "type": "string",
+                  "description": "Name of the Iceberg catalog (e.g., 'sqlflow_test')."
+                },
+                "table_name": {
+                  "type": "string",
+                  "description": "Name of the Iceberg table (e.g., 'default.city_events')."
+                }
+              },
+              "required": [
+                "catalog_name",
+                "table_name"
+              ]
             }
           },
-          "required": ["type"]
+          "required": [
+            "type"
+          ]
         }
       },
-      "required": ["batch_size", "source", "handler", "sink"],
+      "required": [
+        "batch_size",
+        "source",
+        "handler",
+        "sink"
+      ],
       "additionalProperties": false
     }
   },
-  "required": ["pipeline"],
+  "required": [
+    "pipeline"
+  ],
   "additionalProperties": false
 }
