--- a/sqlflow/static/schemas/config.json
+++ b/sqlflow/static/schemas/config.json
@@ -23,6 +23,79 @@
         ]
       }
     },
+     "tables": {
+      "type": "object",
+      "description": "Predefined SQL tables used in the pipeline.",
+      "properties": {
+        "sql": {
+          "type": "array",
+          "description": "List of tables with their SQL definitions and management configurations.",
+          "items": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "description": "Name of the table."
+              },
+              "sql": {
+                "type": "string",
+                "description": "SQL statements to create the table and indexes."
+              },
+              "manager": {
+                "type": "object",
+                "description": "Manager for handling windowing operations and clean-up.",
+                "properties": {
+                  "tumbling_window": {
+                    "type": "object",
+                    "description": "Tumbling window management for table data.",
+                    "properties": {
+                      "collect_closed_windows_sql": {
+                        "type": "string",
+                        "description": "SQL query to collect closed tumbling windows."
+                      },
+                      "delete_closed_windows_sql": {
+                        "type": "string",
+                        "description": "SQL query to delete closed tumbling windows."
+                      }
+                    },
+                    "required": ["collect_closed_windows_sql", "delete_closed_windows_sql"]
+                  },
+                  "sink": {
+                    "type": "object",
+                    "description": "Sink configuration for the managed table.",
+                    "properties": {
+                      "type": {
+                        "type": "string",
+                        "enum": ["kafka"],
+                        "description": "Type of sink (currently only 'kafka' is supported)."
+                      },
+                      "kafka": {
+                        "type": "object",
+                        "description": "Kafka-specific sink configuration.",
+                        "properties": {
+                          "brokers": {
+                            "type": "array",
+                            "items": { "type": "string", "format": "hostname" },
+                            "description": "List of Kafka broker addresses."
+                          },
+                          "topic": {
+                            "type": "string",
+                            "description": "Kafka topic where processed data will be published."
+                          }
+                        },
+                        "required": ["brokers", "topic"]
+                      }
+                    },
+                    "required": ["type"]
+                  }
+                }
+              }
+            },
+            "required": ["name", "sql", "manager"]
+          }
+        }
+      }
+    },
     "pipeline": {
       "type": "object",
       "description": "Main pipeline configuration.",
